[package]
name = "atm-runner"
version = "0.1.0"
description = "ATM Auto Runner — Samsung Approval Test Manager"
authors = ["endri-pro"]
edition = "2021"

[lib]
name = "atm_runner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
regex = "1"
